--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,10 @@
 @import './components/buttons';
 @import './components/links';
 @import './components/journal';
+@import './components/nothing';
+@import './components/notes';
+
+
 
 
 
